# tracing-span-capture

./: .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: capture.rs
src/: lib.rs
tests/: cucumber.rs
tests/features/: capture-logs.feature
