[package]
name = "tracing-span-capture"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
once_cell = "1"
tracing-subscriber = { version = "0.3", default-features = false }

[dev-dependencies]
cucumber = { git = "https://github.com/cucumber-rs/cucumber.git", features = ["tracing"] }
tracing-subscriber = "0.3.16"
tokio = { version = '1.27.0', features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false