[package]
name = "tracing-span-capture"
version = "0.0.1"
authors = ["Mateusz Kondej <m@kondej.net>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Capture and record logs for tracing span id"
documentation = "https://docs.rs/tracing-span-capture"
repository = "https://gitlab.com/mateuszkj/tracing-span-capture"
keywords = ["tracing", "logging", "log", "test"]
categories = ["development-tools::testing"]

[dependencies]
tracing = "0.1"
once_cell = "1"
tracing-subscriber = { version = "0.3", default-features = false }

[dev-dependencies]
cucumber = { git = "https://github.com/cucumber-rs/cucumber.git", features = ["tracing"] }
tracing-subscriber = "0.3.16"
tokio = { version = '1.27.0', features = ["macros", "rt-multi-thread"] }

[[test]]
name = "cucumber"
harness = false